Incorrect results for last executed dynamic subtest when an earlier dynamic subtest fails
Example: https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7718/fi-byt-n2820/igt@gem_exec_basic@basic@vcs0.html
stderr:
Starting dynamic subtest: vcs0
Dynamic subtest vcs0: SUCCESS (0.006s)
Subtest basic failed.
No log.
Subtest basic: FAIL (6.216s)
The dynamic subtest is marked as WARN because there's non-control lines in stderr:
Subtest basic failed.
No log.
The non-control lines in stderr are printed because one dynamic subtest earlier failed, causing the executed normal subtest to then fail. Failing a subtest prints those extra lines.